// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ContentEditable > renders correctly 1`] = `
<span
  class="white-space-nowrap content-editable"
  contenteditable="true"
  data-v-dac5b5d4=""
  placeholder=""
/>
`;

exports[`ContentEditable > renders correctly as dark 1`] = `
<span
  class="white-space-nowrap content-editable content-editable--dark"
  contenteditable="true"
  data-v-dac5b5d4=""
  placeholder=""
/>
`;
